@@ -13,6 +13,7 @@ ver 0.24 (not yet released)
   - new commands "stickernames" and "playlistlength"
   - new "search"/"find" filter "added-since"
   - allow range in listplaylist and listplaylistinfo
+  - "sticker find" supports sort and window parameter and new sticker compare operators "lt" and "gt"
 * database
   - attribute "added" shows when each song was added to the database
   - proxy: require MPD 0.21 or later
